Clean-up dependency on Sun JDK by replacing access to BASE64Encoder by Apache code.
Switched JDK compliance to the correct value.

Some work on the ConsistencyWatchdog, does not yet work.